Initial EVTYPE cleanup with merge; 67.9% match

--- a/PA2_template.Rmd
+++ b/PA2_template.Rmd
@@ -22,6 +22,7 @@ Answer these two questions:
 
 ## Data
 
+Actual dollars, not adjusted for inflation
 <br />
 <hr />
 
@@ -36,6 +37,12 @@ options(warn = -1)
 # but using it to reinforce the idea that we want to keep the write-up clean.
 suppressWarnings(library(knitr))
 
+# use data.table for ease of storage
+suppressWarnings(library(data.table))
+
+# use dplyr for data manipulation
+suppressWarnings(library(dplyr))
+
 # set knitr default option values, specifically echo, turning on the cache and
 # setting its location, and specifying the figure directory
 opts_chunk$set(echo = TRUE, 
@@ -49,13 +56,61 @@ opts_chunk$set(echo = TRUE,
 
 ```{r}
 
-# We only need the injury and fatality counts to answer the first question and the property and crop damage for the second question. This will allow us to not load the values we don't need, saving memory and processing time
-col_classes <- c("NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "character", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "numeric", "numeric", "numeric", "character", "numeric", "character", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL")
-my.file <- bzfile("repdata_data_StormData.csv.bz2")
-my.data <- (read.csv(my.file, colClasses = col_classes))
-my.factor <- as.factor(my.data$EVTYPE)
-summary(my.factor)
+# We only need the injury and fatality counts to answer the first question and the 
+# property and crop damage for the second question. This will allow us to not load 
+# the values we don't need, saving memory and processing time
+col_classes <- c("NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", 
+                 "character", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", 
+                 "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", 
+                 "numeric", "numeric", "numeric", "factor", "numeric", "factor", 
+                 "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", "NULL", 
+                 "numeric")
+storm.file <- bzfile("repdata_data_StormData.csv.bz2")
+storm.data <- data.table(read.csv(storm.file, colClasses = col_classes))
 
+# most event entries do not have any reported fatalities, injuries, or damages. Filter those out
+storm.subset <- storm.data[!(FATALITIES == 0 & INJURIES == 0 & PROPDMG == 0 & CROPDMG == 0), ]
+
+# Just for sanity checks. Not really needed for analysis
+my.factor <- as.factor(storm.data$EVTYPE)
+summary(my.factor)
+levels(my.factor)
+
+```
+
+There are 48 weather events categorized by NOAA. The input data has 985. In order 
+to analyze the data and find the most dangerous and expensive events we much 
+clean up the `EVTYPE` field in the input file. This applies to answering both 
+questions.
+
+```{r}
+
+# these are NOAA's weather events. Use this list to clean up the values found in the input file
+event.list <- c(
+              "Astronomical Low Tide", "Avalanche", "Blizzard", "Coastal Flood", 
+                "Cold/Wind Chill", "Debris Flow", "Dense Fog", "Dense Smoke", 
+                "Drought", "Dust Devil", "Dust Storm", "Excessive Heat", 
+                "Extreme Cold/Wind Chill", "Flash Flood", "Flood", "Freezing Fog",
+                "Frost/Freeze", "Funnel Cloud", "Hail", "Heat", 
+                "Heavy Rain", "Heavy Snow", "High Surf", "High Wind", 
+                "Hurricane/Typhoon", "Ice Storm", "Lakeshore Flood", "Lake-Effect Snow",
+                "Lightning", "Marine Hail", "Marine High Wind", "Marine Strong Wind",
+                "Marine Thunderstorm Wind", "Rip Current", "Seiche", "Sleet", 
+                "Storm Tide", "Strong Wind", "Thunderstorm Wind", "Tornado", 
+                "Tropical Depression", "Tropical Storm", "Tsunami", "Volcanic Ash", 
+                "Waterspout", "Wildfire", "Winter Storm", "Winter Weather")
+event.list <- data.table(event.list)
+event.list <- mutate(event.list, search = toupper(event.list))
+setkey(event.list, search)
+
+# add a variable in our data set to store the cleaned up version of the event type
+storm.subset <- mutate(storm.subset, search = toupper(EVTYPE))
+setkey(storm.subset, search)
+
+storm.set1 <- left_join(storm.subset, event.list, by = c("search" = "search"))
+
+sum(is.na(storm.set1$event.list))
+sum(!is.na(storm.set1$event.list))
 ```
 
 ## Results
