--- a/PA2_template.Rmd
+++ b/PA2_template.Rmd
@@ -109,6 +109,16 @@ setkey(storm.subset, search)
 
 storm.set1 <- left_join(storm.subset, event.list, by = c("search" = "search"))
 
+storm.set1$search <- ifelse(storm.set1$EVTYPE == "THUNDERSTORM WINDS", "THUNDERSTORM WIND", storm.set1$EVTYPE)
+storm.set1$event.list <- ifelse(storm.set1$EVTYPE == "THUNDERSTORM WINDS", "Thunderstorm Wind", storm.set1$EVTYPE)
+my.tmp <- grep("MARINE TSTM WIND", storm.set1$EVTYPE)
+storm.set1$search[my.tmp ] <- "Marine Thunderstorm Wind"
+storm.set1$event.list[my.tmp ] <- "Marine Thunderstorm Wind"
+
+# but not grep("TSTM WIND", storm.set1$EVTYPE)
+my.tmp <- storm.set1[(is.na(storm.set1$event.list) & storm.set1$EVTYPE == "TSTM WIND")]
+
+
 sum(is.na(storm.set1$event.list))
 sum(!is.na(storm.set1$event.list))
 ```
