Working on costs

--- a/PA2_template.Rmd
+++ b/PA2_template.Rmd
@@ -114,6 +114,21 @@ records.total <- count(storm.set1)
 records.unmatched <- sum(is.na(storm.set1$event.list))
 records.matched <- sum(!is.na(storm.set1$event.list))
 records.ratio <- round(records.matched / records.total, 3)
+
+# Now create fields for actual property and crop costs
+storm.set1 <- mutate(storm.set1, prop.total = PROPDMG, crop.total = CROPDMG)
+
+# property rows we need to adjust 
+propK <- storm.set1$PROPDMGEXP == "K"
+propM <- storm.set1$PROPDMGEXP == "M"
+propB <- storm.set1$PROPDMGEXP == "B"
+
+# crop rows we need to adjust
+cropK <- storm.set1$CROPDMGEXP == "K"
+cropM <- storm.set1$CROPDMGEXP == "M"
+cropB <- storm.set1$CROPDMGEXP == "B"
+
+
 ```
 
 There are a total of `r records.total` records of which we have matched `r records.matched` for a total of `r records.ratio * 100`%.
