--- a/PA2_template.Rmd
+++ b/PA2_template.Rmd
@@ -23,6 +23,8 @@ Answer these two questions:
 ## Data
 
 Actual dollars, not adjusted for inflation
+
+Assumes no duplicate records
 <br />
 <hr />
 
@@ -107,6 +109,7 @@ setkey(event.list, search)
 storm.subset <- mutate(storm.subset, search = toupper(EVTYPE))
 setkey(storm.subset, search)
 
+# Match the input data with the NOAA list
 storm.set1 <- left_join(storm.subset, event.list, by = c("search" = "search"))
 
 # how many are matched with good EVTYPE values?
@@ -115,25 +118,23 @@ records.unmatched <- sum(is.na(storm.set1$event.list))
 records.matched <- sum(!is.na(storm.set1$event.list))
 records.ratio <- round(records.matched / records.total, 3)
 
-# Now create fields for actual property and crop costs
-storm.set1 <- mutate(storm.set1, prop.total = PROPDMG, crop.total = CROPDMG)
-
-# adjust property damage costs based on the PROPGMGEXP
-storm.set1 <- storm.set1 %>%
-        mutate(prop.total = ifelse(PROPDMGEXP == "K", prop.total * 1000, prop.total)) %>%
-        mutate(prop.total = ifelse(PROPDMGEXP == "M", prop.total * 1000000, prop.total)) %>%
-        mutate(prop.total = ifelse(PROPDMGEXP == "B", prop.total * 1000000000, prop.total))
-
-# and do the same for crop damage costs
-storm.set1 <- storm.set1 %>%
-        mutate(crop.total = ifelse(CROPDMGEXP == "K", crop.total * 1000, crop.total)) %>%
-        mutate(crop.total = ifelse(CROPDMGEXP == "M", crop.total * 1000000, crop.total)) %>%
-        mutate(crop.total = ifelse(CROPDMGEXP == "B", crop.total * 1000000000, crop.total))
-
-
 ```
 
-There are a total of `r records.total` records of which we have matched `r records.matched` for a total of `r records.ratio * 100`%.
+There are a total of `r records.total` records. Of these records, there are `r records.matched` 
+which correctly coded as NOAA's recognized weather events. This is a ratio of `r records.ratio * 100`% 
+that were well coded. The remaining unmatched records represent a significant number of fatalities, 
+injuries, and damage that could change the results of the most dangerous and expensive weather events. 
+In order to keep this miscoding from under-reporting the results, we'll clean up as much of the data 
+as we can.
+
+Some of the data records include multiple weather events such as Thunderstorm Wind and Lightning or 
+Heavy Snow and High Wind. In these cases we will categorize the record under the first weather event. 
+In these two examples, the data record would be recorded as Thunderstorm Wind and Heavy Snow 
+respectively and the data would not appear as Lightning or Heavy Snow. This will prevent fatalities, 
+injuries, and damages from appearing multiple times which would skew the total. The second, or third, 
+events listed will be under reported in these cases. Another approach would be to divide the damages 
+evenly between the weather events. However, this proves to be very time consuming for a marginal 
+refinement of the results.
 
 ```{r}
 #
@@ -148,21 +149,46 @@ There are a total of `r records.total` records of which we have matched `r recor
 #records.unmatched <- sum(is.na(storm.set1$event.list))
 #records.matched <- sum(!is.na(storm.set1$event.list))
 #records.ratio <- round(records.matched / records.total, 3)
+
+# there are a large number of Thunderstorm Winds that are not coded correctly. 
+is.marine <- grep("MARINE TSTM", storm.set1$search)
+storm.set1$event.list[is.marine] <- c("Marine Thunderstorm Wind")
+
+# Hurricanes & Typhons are very damaging. Make sure we include these rare but important events in the results
+# These grep statements will include the entries already matched but does not cause a problem
+is.ht <- grep("HURRICANE", storm.set1$search)
+storm.set1$event.list[is.ht] <- c("Hurricane/Typhoon")
+is.ht <- grep("TYPHOON", storm.set1$search)
+storm.set1$event.list[is.ht] <- c("Hurricane/Typhoon")
+
+# after our clean-up how many are matched with good EVTYPE values?
+records.total <- count(storm.set1)
+records.unmatched <- sum(is.na(storm.set1$event.list))
+records.matched <- sum(!is.na(storm.set1$event.list))
+records.ratio <- round(records.matched / records.total, 3)
+
 ```
 
-There are a total of `r records.total` records of which we have matched `r records.matched` for a total of `r records.ratio * 100`%.
+After cleaning up the data there are still a total of `r records.total` records of which we now have matched `r records.matched` for a total of `r records.ratio * 100`%.
 
 ```{r}
-#my.tmp <- grep("MARINE TSTM WIND", storm.set1$EVTYPE)
-#storm.set1$search[my.tmp ] <- "MARINE THUNDERSTORM WIND"
-#storm.set1$event.list[my.tmp ] <- "Marine Thunderstorm Wind"
-#
-## but not grep("TSTM WIND", storm.set1$EVTYPE)
-#my.tmp <- storm.set1[(is.na(storm.set1$event.list) & storm.set1$EVTYPE == "TSTM WIND")]
-#
-#
-#sum(is.na(storm.set1$event.list))
-#sum(!is.na(storm.set1$event.list))
+# the input data records property and crop damages in two fields, one for a numerical amount 
+# and another for the magnitude of damages. We'll need to get the actual number for our analysis
+
+# adjust property damage costs based on the PROPGMGEXP
+storm.set1 <- storm.set1 %>%
+        mutate(prop.total = PROPDMG) %>%
+        mutate(prop.total = ifelse(PROPDMGEXP == "K", prop.total * 1000, prop.total)) %>%
+        mutate(prop.total = ifelse(PROPDMGEXP == "M", prop.total * 1000000, prop.total)) %>%
+        mutate(prop.total = ifelse(PROPDMGEXP == "B", prop.total * 1000000000, prop.total))
+
+# and do the same for crop damage costs
+storm.set1 <- storm.set1 %>%
+        mutate(crop.total = CROPDMG) %>%
+        mutate(crop.total = ifelse(CROPDMGEXP == "K", crop.total * 1000, crop.total)) %>%
+        mutate(crop.total = ifelse(CROPDMGEXP == "M", crop.total * 1000000, crop.total)) %>%
+        mutate(crop.total = ifelse(CROPDMGEXP == "B", crop.total * 1000000000, crop.total))
+
 ```
 
 ## Results
@@ -175,7 +201,7 @@ by_event <- group_by(storm.set1, event.list)
 dangerous <- summarize(by_event, sum(FATALITIES), sum(INJURIES))
 setnames(dangerous, 1:3, c("Weather Event", "Deaths", "Injuries"))
 dangerous <- dangerous %>% 
-        na.omit() %>%
+        #na.omit() %>% 
         mutate(Total = Deaths + Injuries) %>% 
         mutate(rev.sort = 100000 - Total)
 
@@ -193,7 +219,7 @@ by_event <- group_by(storm.set1, event.list)
 costs <- summarize(by_event, sum(prop.total), sum(crop.total))
 setnames(costs, 1:3, c("Weather Event", "Property", "Crop"))
 costs <- costs %>% 
-        #na.omit() %>%
+        #na.omit() %>% 
         mutate(Total = Property + Crop) %>% 
         mutate(rev.sort = 100000000 - Total)
 
